--- a/Programs/Assigment-1-programs/Problem-1.ipynb
+++ b/Programs/Assigment-1-programs/Problem-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -24,6 +24,366 @@
       "dict_keys(['__header__', '__version__', '__globals__', 'drivFaceD'])\n",
       "(606, 6400)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>6390</th>\n",
+       "      <th>6391</th>\n",
+       "      <th>6392</th>\n",
+       "      <th>6393</th>\n",
+       "      <th>6394</th>\n",
+       "      <th>6395</th>\n",
+       "      <th>6396</th>\n",
+       "      <th>6397</th>\n",
+       "      <th>6398</th>\n",
+       "      <th>6399</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.694118</td>\n",
+       "      <td>0.729412</td>\n",
+       "      <td>0.713725</td>\n",
+       "      <td>0.670588</td>\n",
+       "      <td>0.592157</td>\n",
+       "      <td>0.549020</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.549020</td>\n",
+       "      <td>0.572549</td>\n",
+       "      <td>0.576471</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.498039</td>\n",
+       "      <td>0.498039</td>\n",
+       "      <td>0.490196</td>\n",
+       "      <td>0.474510</td>\n",
+       "      <td>0.458824</td>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>0.450980</td>\n",
+       "      <td>0.427451</td>\n",
+       "      <td>0.411765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.996078</td>\n",
+       "      <td>0.996078</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.952941</td>\n",
+       "      <td>0.831373</td>\n",
+       "      <td>0.654902</td>\n",
+       "      <td>0.505882</td>\n",
+       "      <td>0.415686</td>\n",
+       "      <td>0.380392</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.498039</td>\n",
+       "      <td>0.501961</td>\n",
+       "      <td>0.517647</td>\n",
+       "      <td>0.517647</td>\n",
+       "      <td>0.509804</td>\n",
+       "      <td>0.462745</td>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>0.462745</td>\n",
+       "      <td>0.415686</td>\n",
+       "      <td>0.435294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>0.368627</td>\n",
+       "      <td>0.341176</td>\n",
+       "      <td>0.317647</td>\n",
+       "      <td>0.356863</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.411765</td>\n",
+       "      <td>0.403922</td>\n",
+       "      <td>0.356863</td>\n",
+       "      <td>0.313725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.349020</td>\n",
+       "      <td>0.341176</td>\n",
+       "      <td>0.356863</td>\n",
+       "      <td>0.380392</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.380392</td>\n",
+       "      <td>0.349020</td>\n",
+       "      <td>0.325490</td>\n",
+       "      <td>0.298039</td>\n",
+       "      <td>0.270588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.996078</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.996078</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.243137</td>\n",
+       "      <td>0.227451</td>\n",
+       "      <td>0.243137</td>\n",
+       "      <td>0.262745</td>\n",
+       "      <td>0.258824</td>\n",
+       "      <td>0.247059</td>\n",
+       "      <td>0.227451</td>\n",
+       "      <td>0.247059</td>\n",
+       "      <td>0.258824</td>\n",
+       "      <td>0.258824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>601</th>\n",
+       "      <td>0.262745</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.278431</td>\n",
+       "      <td>0.278431</td>\n",
+       "      <td>0.290196</td>\n",
+       "      <td>0.305882</td>\n",
+       "      <td>0.329412</td>\n",
+       "      <td>0.345098</td>\n",
+       "      <td>0.360784</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.278431</td>\n",
+       "      <td>0.274510</td>\n",
+       "      <td>0.282353</td>\n",
+       "      <td>0.282353</td>\n",
+       "      <td>0.349020</td>\n",
+       "      <td>0.525490</td>\n",
+       "      <td>0.537255</td>\n",
+       "      <td>0.521569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602</th>\n",
+       "      <td>0.254902</td>\n",
+       "      <td>0.258824</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.262745</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.286275</td>\n",
+       "      <td>0.298039</td>\n",
+       "      <td>0.309804</td>\n",
+       "      <td>0.329412</td>\n",
+       "      <td>0.341176</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.258824</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.274510</td>\n",
+       "      <td>0.274510</td>\n",
+       "      <td>0.325490</td>\n",
+       "      <td>0.490196</td>\n",
+       "      <td>0.486275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>603</th>\n",
+       "      <td>0.301961</td>\n",
+       "      <td>0.305882</td>\n",
+       "      <td>0.309804</td>\n",
+       "      <td>0.321569</td>\n",
+       "      <td>0.325490</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.329412</td>\n",
+       "      <td>0.329412</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.270588</td>\n",
+       "      <td>0.274510</td>\n",
+       "      <td>0.278431</td>\n",
+       "      <td>0.282353</td>\n",
+       "      <td>0.282353</td>\n",
+       "      <td>0.274510</td>\n",
+       "      <td>0.282353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>0.317647</td>\n",
+       "      <td>0.325490</td>\n",
+       "      <td>0.341176</td>\n",
+       "      <td>0.349020</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>0.356863</td>\n",
+       "      <td>0.360784</td>\n",
+       "      <td>0.360784</td>\n",
+       "      <td>0.360784</td>\n",
+       "      <td>0.360784</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.258824</td>\n",
+       "      <td>0.278431</td>\n",
+       "      <td>0.290196</td>\n",
+       "      <td>0.294118</td>\n",
+       "      <td>0.305882</td>\n",
+       "      <td>0.321569</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>0.545098</td>\n",
+       "      <td>0.541176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>605</th>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.345098</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>0.360784</td>\n",
+       "      <td>0.356863</td>\n",
+       "      <td>0.356863</td>\n",
+       "      <td>0.349020</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.141176</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>0.117647</td>\n",
+       "      <td>0.117647</td>\n",
+       "      <td>0.117647</td>\n",
+       "      <td>0.160784</td>\n",
+       "      <td>0.474510</td>\n",
+       "      <td>0.603922</td>\n",
+       "      <td>0.545098</td>\n",
+       "      <td>0.517647</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>606 rows × 6400 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         0         1         2         3         4         5         6     \\\n",
+       "0    0.694118  0.729412  0.713725  0.670588  0.592157  0.549020  0.533333   \n",
+       "1    1.000000  0.996078  0.996078  1.000000  0.952941  0.831373  0.654902   \n",
+       "2    1.000000  1.000000  1.000000  1.000000  1.000000  1.000000  1.000000   \n",
+       "3    1.000000  1.000000  1.000000  1.000000  1.000000  1.000000  1.000000   \n",
+       "4    1.000000  1.000000  1.000000  1.000000  1.000000  0.996078  1.000000   \n",
+       "..        ...       ...       ...       ...       ...       ...       ...   \n",
+       "601  0.262745  0.266667  0.278431  0.278431  0.290196  0.305882  0.329412   \n",
+       "602  0.254902  0.258824  0.266667  0.262745  0.270588  0.286275  0.298039   \n",
+       "603  0.301961  0.305882  0.309804  0.321569  0.325490  0.333333  0.333333   \n",
+       "604  0.317647  0.325490  0.341176  0.349020  0.352941  0.356863  0.360784   \n",
+       "605  0.333333  0.345098  0.352941  0.352941  0.352941  0.352941  0.360784   \n",
+       "\n",
+       "         7         8         9     ...      6390      6391      6392  \\\n",
+       "0    0.549020  0.572549  0.576471  ...  0.498039  0.498039  0.490196   \n",
+       "1    0.505882  0.415686  0.380392  ...  0.498039  0.501961  0.517647   \n",
+       "2    1.000000  1.000000  1.000000  ...  0.352941  0.368627  0.341176   \n",
+       "3    1.000000  1.000000  1.000000  ...  0.349020  0.341176  0.356863   \n",
+       "4    1.000000  1.000000  0.996078  ...  0.243137  0.227451  0.243137   \n",
+       "..        ...       ...       ...  ...       ...       ...       ...   \n",
+       "601  0.345098  0.360784  0.352941  ...  0.270588  0.270588  0.278431   \n",
+       "602  0.309804  0.329412  0.341176  ...  0.258824  0.266667  0.270588   \n",
+       "603  0.333333  0.329412  0.329412  ...  0.266667  0.266667  0.270588   \n",
+       "604  0.360784  0.360784  0.360784  ...  0.258824  0.278431  0.290196   \n",
+       "605  0.356863  0.356863  0.349020  ...  0.141176  0.121569  0.117647   \n",
+       "\n",
+       "         6393      6394      6395      6396      6397      6398      6399  \n",
+       "0    0.474510  0.458824  0.466667  0.466667  0.450980  0.427451  0.411765  \n",
+       "1    0.517647  0.509804  0.462745  0.466667  0.462745  0.415686  0.435294  \n",
+       "2    0.317647  0.356863  0.400000  0.411765  0.403922  0.356863  0.313725  \n",
+       "3    0.380392  0.400000  0.380392  0.349020  0.325490  0.298039  0.270588  \n",
+       "4    0.262745  0.258824  0.247059  0.227451  0.247059  0.258824  0.258824  \n",
+       "..        ...       ...       ...       ...       ...       ...       ...  \n",
+       "601  0.274510  0.282353  0.282353  0.349020  0.525490  0.537255  0.521569  \n",
+       "602  0.270588  0.270588  0.274510  0.274510  0.325490  0.490196  0.486275  \n",
+       "603  0.270588  0.274510  0.278431  0.282353  0.282353  0.274510  0.282353  \n",
+       "604  0.294118  0.305882  0.321569  0.333333  0.466667  0.545098  0.541176  \n",
+       "605  0.117647  0.117647  0.160784  0.474510  0.603922  0.545098  0.517647  \n",
+       "\n",
+       "[606 rows x 6400 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -32,12 +392,13 @@
     "print(data.keys())\n",
     "print(data['drivFaceD'][0][0][0].shape)\n",
     "X_data = data['drivFaceD'][0][0][0]\n",
-    "X_dataframe = pd.DataFrame(X_data)"
+    "X_dataframe = pd.DataFrame(X_data)\n",
+    "display(X_dataframe)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,15 +920,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model score =  0.30811988099252474\n",
-      "MOdel explained variance =  0.310683959492006\n"
+      "Model score with polynomial mapping =  0.30811988099252474\n",
+      "Model explained variance wiht polynomial mapping =  0.310683959492006\n"
      ]
     }
    ],
@@ -575,8 +936,8 @@
     "model = linear_model.LinearRegression()\n",
     "model.fit(X_train_new,y_train)\n",
     "y_new_pred = model.predict(X_test_new)\n",
-    "print(\"Model score = \", model.score(X_test_new,y_test))\n",
-    "print(\"Model explained variance = \", metrics.explained_variance_score(y_test,y_new_pred))"
+    "print(\"Model score with polynomial mapping = \", model.score(X_test_new,y_test))\n",
+    "print(\"Model explained variance wiht polynomial mapping = \", metrics.explained_variance_score(y_test,y_new_pred))"
    ]
   }
  ],
