--- a/Programs/Assigment-1-programs/Problem-2.ipynb
+++ b/Programs/Assigment-1-programs/Problem-2.ipynb
@@ -246,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('adaenv')",
+   "display_name": "Python 3.8.10 ('myML')",
    "language": "python",
    "name": "python3"
   },
@@ -260,12 +260,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3b4875b0c0e5921500ba89c3f7c140a0122aaa6b3aec3bf88d6de6cfd93ac7ec"
+    "hash": "461c633d1ea7d645fb6c8542d05741bfc7cc51cdd4f0b160fd571fee5730823f"
    }
   }
  },
