--- a/Programs/Assigment-1-programs/Problem-1.ipynb
+++ b/Programs/Assigment-1-programs/Problem-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -888,29 +888,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.33281396438598737\n",
-      "0.3351803071508104\n"
+      "explained Variance with no bias and identity feature map (fit_intercept = false)  =  -0.3276472406903881\n"
      ]
     }
    ],
    "source": [
-    "model = linear_model.LinearRegression()\n",
+    "model = linear_model.LinearRegression(fit_intercept=False)\n",
     "model.fit(X_train, y_train)\n",
-    "print(model.score(X_test, y_test))\n",
     "y_predict = model.predict(X_test)\n",
-    "print(metrics.explained_variance_score(y_test,y_predict))"
+    "print(\"explained Variance with no bias and identity feature map (fit_intercept = false)  = \", metrics.explained_variance_score(y_test,y_predict))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,15 +918,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model score with polynomial mapping =  0.30811988099252474\n",
-      "Model explained variance wiht polynomial mapping =  0.310683959492006\n"
+      "Model explained variance with polynomial mapping =  0.310683959492006\n"
      ]
     }
    ],
@@ -936,8 +933,8 @@
     "model = linear_model.LinearRegression()\n",
     "model.fit(X_train_new,y_train)\n",
     "y_new_pred = model.predict(X_test_new)\n",
-    "print(\"Model score with polynomial mapping = \", model.score(X_test_new,y_test))\n",
-    "print(\"Model explained variance wiht polynomial mapping = \", metrics.explained_variance_score(y_test,y_new_pred))"
+    "# print(\"Model score with polynomial mapping = \", model.score(X_test_new,y_test))\n",
+    "print(\"Model explained variance with polynomial mapping = \", metrics.explained_variance_score(y_test,y_new_pred))"
    ]
   }
  ],
