Fit intercept problem solved

--- a/Programs/Assigment-1-programs/Problem-1.ipynb
+++ b/Programs/Assigment-1-programs/Problem-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -862,13 +862,14 @@
     "yF = label_data['yF']\n",
     "wF = label_data['wF']\n",
     "hF = label_data['hF']\n",
-    "y_data = pd.concat([xF, yF, wF, hF], axis = 1)\n",
+    "y_data = label_data[[\"xF\", \"yF\", \"wF\", \"hF\"]]\n",
+    "# y_data = pd.concat([xF, yF, wF, hF], axis = 1)\n",
     "display(y_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -888,14 +889,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explained Variance with no bias and identity feature map (fit_intercept = false)  =  -0.3276472406903881\n"
+      "explained Variance with no bias and identity feature map (fit_intercept = false)  =  -0.3276472406903836\n"
      ]
     }
    ],
@@ -908,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,14 +919,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model explained variance with polynomial mapping =  0.310683959492006\n"
+      "Model explained variance with polynomial mapping =  0.3106797763374498\n"
      ]
     }
    ],
@@ -940,7 +941,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('myML')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -954,12 +955,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "461c633d1ea7d645fb6c8542d05741bfc7cc51cdd4f0b160fd571fee5730823f"
+    "hash": "8201e9342a4a492ddbd4e81efec90b2ccf0d205cda2cc39ac893f0c43374b5e0"
    }
   }
  },
