--- a/Assignments/Assignment-3/main.tex
+++ b/Assignments/Assignment-3/main.tex
@@ -8,10 +8,11 @@
 \tableofcontents
 \newpage
 
+\include{sections/S3.1}
 \include{sections/S3.2}
 \include{sections/S3.3}
-\include{testfile.tex}
 \include{sections/S3.4}
+\include{sections/S3.5}
 % \include{sections/P3}
 % \include{sections/P4}
 % \include{sections/P5}
