--- a/Assignments/Assignment-3/preamble.tex
+++ b/Assignments/Assignment-3/preamble.tex
@@ -21,6 +21,6 @@
 \usepackage{physics}
 
 
-\renewcommand*{\thesection}{\Roman{section}.}
-\renewcommand*{\thesubsection}{\arabic{subsection}.}
-\renewcommand*{\thesubsubsection}{\roman{subsubsection}.}
+% \renewcommand*{\thesection}{\Roman{section} .}
+% \renewcommand*{\thesubsection}{\arabic{subsection} .}
+% \renewcommand*{\thesubsubsection}{\roman{subsubsection} .}
