--- a/Assignments/Assignment-3/sections/S3.3.tex
+++ b/Assignments/Assignment-3/sections/S3.3.tex
@@ -93,7 +93,7 @@ To see the code please visit \cite{CS3390}
     \caption{Plots of the class conditionals}
 \end{figure}
 
-\section{Problem 4.22}
+\subsection{Problem 4.22}
 We can write our code for a bayes classiifer for these points, see \cite{CS3390}. Please note that the 
 priors are uniform , so they play no role in calculating the denisties.
 we need only calculate the values of the class conditionals and take the class that assigns maximum probability,
@@ -107,7 +107,7 @@ here are the density vectors for both the examples
     \\
     \therefore Class(x_2) = 1,2
 \end{gather}
-\section{Problem 4.23}
+\subsection{Problem 4.23}
 For the code please see \cite{CS3390}.
 Please note that the prior is uniform, so it plays no role in finding the maximum score
 The male is assumed to be class 0 
