--- a/Assignments/Assignment-3/sections/S3.2.tex
+++ b/Assignments/Assignment-3/sections/S3.2.tex
@@ -90,5 +90,13 @@ If you wish to see the proof that the posterior is a gaussian also, I shall refe
 provided under assignment - 1( I will write a bit here too) \cite{CS3390}
 
 \subsection{Simulation Question}
-
+The answers are here 
+\\
+$random_{state} = 42$
+\\
+    score for LG = [0.95787773 0.85887439]
+    \\
+    score for GLG = array([0.98711618, 0.98790674])
+    \\
+If you wish to see code, please see \cite{CS3390}
 
