--- a/Assignments/Assignment-3/sections/S3.5.tex
+++ b/Assignments/Assignment-3/sections/S3.5.tex
@@ -10,7 +10,7 @@ we can drop the subscript and note that $\eta_{ij} = (w^Tx_i)_j$
     = \frac{I(k = j)e^{(w^Tx_i)_k}\sum_l e^{(w^Tx_i)_l} - e^{(w^Tx_i)_j}e^{(w^Tx_i)_k}}{(\sum_l e^{(w^Tx_i)_l})^2} \\ 
     = \mu_{ik} (I( k = j) - \mu_{ij})
 \end{align}
-Calculating the Hessian.
+Calculating the Hessian will be updated soon.
 
 
 \subsection{Murphy 10.3}
@@ -22,4 +22,7 @@ hence the log likelihood on the dataset for QuadLog will atleast be as good as t
     L(\text{QuadLog}) \le L(\text{LinLog}) \\
     L(\text{QuadLog}) \le L(\text{LDA(GaussI)}) \\
     L(\text{QDA(GuassX)}) \le  ? \ge L(\text{QuadLog}) \\
+    L(\text{LDA}) \le ? \ge L(\text{LinLog})
 \end{gather}
+For the last two cases I cannto say which will do better, they both have 2 different apporaches of modelling 
+, even though one lies inside the other, I cannto say anything about the \textbf{log likelihood}
