Kernelized SVM Added

--- a/Programs/A5-programs/Problem-2.ipynb
+++ b/Programs/A5-programs/Problem-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "(606, 4)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -580,28 +580,28 @@
     }
    ],
    "source": [
-    "X_train,X_test, y_train, y_test = model_selection.train_test_split(X_data, y_data, test_size= 0.5 ,random_state=42, shuffle = True)\n",
+    "X_train,X_test, y_train, y_test = model_selection.train_test_split(X_data, y_data, test_size= 0.5 , shuffle = True)\n",
     "print(X_train.shape)\n",
     "print(y_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3049747447679149\n",
-      "0.31440350769508346\n",
-      "0.3745600678799745\n",
-      "0.49112338153917906\n",
-      "0.5065454364169621\n",
-      "Ridge(alpha=100)\n",
-      "0.49567647518339486\n",
-      "[0.01, 0.1, 1, 10, 100]\n"
+      "0.3472433034020817\n",
+      "0.35202594708698315\n",
+      "0.3861790385873294\n",
+      "0.47141367613676655\n",
+      "0.4702798774799567\n",
+      "Ridge(alpha=10)\n",
+      "0.5462543713804926\n",
+      "[0.01, 0.1, 1, 10]\n"
      ]
     }
    ],
@@ -630,14 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unregularized score =  0.3328139643859873\n"
+      "Unregularized score =  0.3952951458429419\n"
      ]
     }
    ],
@@ -649,16 +649,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5557398504537514"
+       "0.5859686209936035"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
