--- a/Programs/A5-programs/Problem-1.ipynb
+++ b/Programs/A5-programs/Problem-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,13 @@
     "import pandas as pd\n",
     "from sklearn import *\n",
     "from sklearn.model_selection import *\n",
-    "import random\n",
-    "random.seed(0)"
+    "# import random\n",
+    "# random.seed(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -96,17 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
     "#now do cross validation\n",
-    "X_train,X_test, y_train, y_test = train_test_split(feature_data, label_data, shuffle = True, random_state = 42, test_size = 0.5)"
+    "X_train,X_test, y_train, y_test = train_test_split(feature_data, label_data, shuffle = True, test_size = 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,16 +125,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best C =  100.0\n",
-      "LogisticRegression(C=100.0)\n",
-      "0.8412698412698413\n"
+      "Best C =  10.0\n",
+      "LogisticRegression(C=10.0)\n",
+      "0.8888888888888888\n"
      ]
     }
    ],
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8253968253968254\n"
+      "0.8412698412698413\n"
      ]
     }
    ],
@@ -193,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best SVC value of C is =  100.0\n",
+      "best SVC value of C is =  10.0\n",
       "best model =  LinearSVC()\n",
-      "0.8412698412698413\n"
+      "0.873015873015873\n"
      ]
     }
    ],
